--- a/index.html
+++ b/index.html
@@ -1,13 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Welcome to</h1>
+    <section class="flexibility width-half5 Orange-color">
+        <div>
+            <h1 class="change-padding">Start your Order</h1>
+        </div>
+        <div>
+            <h1 class="change-padding">Delivery</h1>
+        </div>
+        <div>
+            <h1 class="change-padding">Carryout</h1>
+        </div>
+    </section>
+    <section class="flexibility">
+        <div class="width-half1">
+            <h1><span class="Orange-color">Skip</span> The Diet</h1>
+            <h1>Just Eat Healthy</h1>
+            <h1>With Food Network</h1>
+            <p style="margin-top: 10px;">Imagine you don't need a diet because we provide</p>
+            <p style="margin-bottom: 70px;">healthy and delicious food for you</p>
+            <a class="button-link" target="_blank"
+                href="https://www.nutrisystem.com/?&msclkid=a29dab8b9f4311180c9ccb6811fcd69e&utm_source=bing&utm_medium=cpc&utm_campaign=Nonbrand%20-%20Diet%2FMeal%20Plan%20-%20Consideration%20-%20Bing%20-%20Search%20-%20Exact&utm_term=healthy%20foods%20to%20eat&utm_content=nonbrand_diets_meal%2Ffood&gclid=a29dab8b9f4311180c9ccb6811fcd69e&gclsrc=3p.ds&_requestid=2167793">Order
+                Food</a>
+        </div>
+        <div class="width-half2">
+            <img src="images/burger.png" alt="">
+        </div>
+    </section>
+
+    <section id="section-2" class="flexibility">
+        <div class="width-half3">
+            <img src="images/img.png" alt="">
+        </div>
+        <div class="width-half4">
+            <h2>About Me</h2>
+            <p style="padding-bottom: 70px;">Homemade food is the best health well food. Preparing food at home, we can
+                control the cleanness, healthiness, freshness of the meal. Many people do not care about preparing and
+                eating at home because they have not taken the time to understand the benefits of eating homemade food.
+                Advantage of eating homemade food. I am TAHAN and i am helping to save their time. And earning some
+                money along with helping.</p>
+            <a class="button-link" target="_blank" href="https://github.com/TAHAN1919">Contact me</a>
+        </div>
+    </section>
+
+    <section class="My-Recipe-Area">
+        <h1>My Recipies</h1>
+        <p>Chicken and Corn Soup, Summer Squash Salad, Chicken Minched Salad</p>
+        <p>Keto Butter Chicken, Mix Veg Sizzling Platter, Turmeric Masala Milk</p>
+        <p>Dahi Kanji</p>
+        <div class="flexibility">
+            <div class="width-half5">
+                <img src="images/Project Cover1.jpg" alt="">
+                <h2 class="My-Recipies-h2-p-style">Recipe Describe</h2>
+                <p class="My-Recipies-h2-p-style">Meat is animal flesh that is eaten as food. Humans have hunted and killed animals for meat since
+                    prehistoric times. The advent of civilization allowed the domestication of animals such as chickens,
+                    sheep, rabbits and cattle.</p>
+            </div>
+            <div class="width-half5">
+                <img src="images/Project Cover5.png" alt="">
+                <h2 class="My-Recipies-h2-p-style">Recipe Describe</h2>
+                <p class="My-Recipies-h2-p-style">Vegetable, in the broadest sense, any kind of plant life or plant product, namely “vegetable matter”;
+                    in common, narrow usage, the term vegetable usually refers to the fresh edible portions of certain
+                    herbaceous plants—root dish.</p>
+            </div>
+            <div class="width-half5">
+                <img src="images/Project Cover7.png" alt="">
+                <h2 class="My-Recipies-h2-p-style">Recipe Describe</h2>
+                <p class="My-Recipies-h2-p-style">Noodles are one of the most important traditional staple foods in Asia. Noodles are typically made
+                    from unleavened wheat dough and are stretched and then cut into varying shapes.and its popularity
+                    has extended to many countries outside of Asia.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="section-4-style">
+        <p>
+        <h1 id="header-padding">700k <span>
+                <h6 id="change-fontfamily">Youtube Subscribers</h6>
+            </span> </h1>
+        <h1 id="header-padding">2.4m <span>
+                <h6 id="change-fontfamily">Youtube Subscribers</h6>
+            </span> </h1>
+        <h1 id="header-padding">100k <span>
+                <h6 id="change-fontfamily">Youtube Subscribers</h6>
+            </span> </h1>
+        </p>
+    </section>
+
+    <footer>
+        <h3><span class="Orange-color">Food</span> Network</h3>
+        <h6>Eat healthy to live healthy. Live healthy to live happy.</h6>
+    </footer>
+
 </body>
+
 </html>
